// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <MultipleCustomHooks /> debe de mostrar la informacion 1`] = `
<div>
  <h1>
    The Breaking Bad Quotes
  </h1>
  <hr />
  <blockquote
    className="blockquote text-end"
  >
    <p>
      123
    </p>
    <p>
      Hola mundo
    </p>
    <p
      className="blockquote-footer"
    >
      Mark
    </p>
  </blockquote>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next Quote
  </button>
</div>
`;

exports[`Pruebas en <MultipleCustomHooks /> debe mostrarse correctamente 1`] = `
<div>
  <h1>
    The Breaking Bad Quotes
  </h1>
  <hr />
  <div
    className="alert alert-success text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next Quote
  </button>
</div>
`;
